--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,15 @@
 [package]
 name = "phy"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
 description = "Generic extendable first-order differential equation solver"
 authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
 license = "MIT"
-homepage = "https://github.com/phy"
-repository = "https://github.com/phy"
+homepage = "https://github.com/agerasev/metaphysics"
+repository = "https://github.com/agerasev/metaphysics"
 documentation = "https://docs.rs/phy"
 
-[features]
-default = ["std"]
-std = ["glam/std"]
-
 [dependencies]
-glam = { version = "0.31.0", default-features = false }
+glam = { version = "0.31.0", default-features = false, features = [
+    "nostd-libm",
+] }
