Update glam, bump version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
 name = "phy"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2024"
 description = "Generic extendable first-order differential equation solver"
 authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
 license = "MIT"
-homepage = "https://github.com/agerasev/metaphysics"
-repository = "https://github.com/agerasev/metaphysics"
+homepage = "https://github.com/agerasev/phy"
+repository = "https://github.com/agerasev/phy"
 documentation = "https://docs.rs/phy"
 
 [features]
@@ -14,7 +14,7 @@ default = ["std"]
 std = ["glam/std"]
 
 [dependencies]
-glam = { version = "0.31.0", default-features = false, features = [
+glam = { version = "0.32.0", default-features = false, features = [
     "nostd-libm",
 ] }
 libm = { version = "0.2.11", default-features = false }
