Add generated tests

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,6 @@ glam = { version = "0.32.0", default-features = false, features = [
     "nostd-libm",
 ] }
 libm = { version = "0.2.11", default-features = false }
+
+[dev-dependencies]
+approx = "0.5.1"
